front-end/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextgen-front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextgen-front-end
  template:
    metadata:
      labels:
        app: nfront-front-end
    spec:
      containers:
        - name: front-end
          image: myacr.azurecr.io/nextjs-app:latest
          ports:
            - containerPort: 3000
