front-end/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextgen-front-end
  namespace: nextgen-gitops
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
  selector:
    app: nextgen-front-end
