front-end/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nextgen-front-end
  namespace: nextgen-gitops
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: "https://azure-store-vault.vault.azure.net/certificates/azure-store-cert/4176a4aa7e3f4d33a0d7a5f48b676f84"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts:
        - front-end.smart-nextgen.com
      secretName: keyvault-front-end
  rules:
    - host: front-end.smart-nextgen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextgen-front-end
                port:
                  number: 3000
